@@ -1,6 +1,6 @@
 /* 
  * Copyright (C) 2002-2009 Igor Sysoev
- * Copyright (C) 2009-2012 Sergey A. Osokin
+ * Copyright (C) 2009-2013 Sergey A. Osokin
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
